Speedup very slow move_primary_with_writes.js test

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.3.0
    • Affects Version/s: 6.0 Required
    • Component/s: None
    • Fully Compatible
    • ALL
    • Sharding EMEA 2022-02-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      move_primary_with_writes.js test usually last 20 min on the sharding suite.
      The reason is that the test is starting a movePrimary DDL operation and then running other DDL operations waiting for them to fail due to DDL lock acquisition timeout.

            Assignee:
            Tommaso Tocci
            Reporter:
            Tommaso Tocci
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: