SERVER-63207  Speedup very slow move_primary_with_writes.js test